# streamplay

./: README.md  aa.sh  beispiel.json  ideas.txt  important.txt  settings.gradle.kts  teststations.json  updateinfo.json
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: badge_update_background.xml  banner_bg_blue.xml  banner_bg_green.xml  banner_bg_red.xml  banner_connected_bg.xml  banner_connecting_bg.xml  banner_error_bg.xml  bg_back_button.xml  bg_badge.xml  bg_chip.xml  bg_chip_selected.xml  bg_icon_circle_blue.xml  bg_icon_circle_cyan.xml  bg_icon_circle_green.xml  bg_icon_circle_orange.xml  bg_icon_circle_purple.xml  bottom_sheet_handle.xml  encore_icon_stations_24.xml  ic_button_back.xml  ic_button_forward.xml  ic_button_manuallog.xml  ic_button_menu.xml  ic_button_muted.xml  ic_button_pause.xml  ic_pin.xml  (+29 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
json/: newlist.json  old standart no list.json  valid.json
logcat/: Xiaomi-24116RACCG-Android-14_2025-12-26_230919.logcat  Xiaomi-EMU-Android-14_2025-12-29_013945.logcat
streamplay-api/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  build.sh  buildx.sh  docker-compose.prod.yml  docker-compose.yml  portainer-stack.yml  test.json  test.sh  upload.sh
streamplay-api/src/: auth.rs  config.rs  db.rs  index.html  main.rs  models.rs
streamplay-api/src/handlers/: admin.rs  user.rs
(+170 files in other folders)
